Prediction model ready with score of 0.891

--- a/backend/notebooks/htmlScrapper.ipynb
+++ b/backend/notebooks/htmlScrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f913da49-4d41-4f6f-9e0e-59146bee5ed2",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,7 @@
     "        'Spec Score': spec_score\n",
     "    })\n",
     "\n",
+    "# Creating dataframe\n",
     "df = pd.DataFrame(data)\n",
     "\n",
     "output_csv_path = '../data/processed/5g_smartphones_dataset.csv'\n",
