--- a/backend/notebooks/htmlScrapper.ipynb
+++ b/backend/notebooks/htmlScrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f913da49-4d41-4f6f-9e0e-59146bee5ed2",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,8 @@
     "for product in soup.find_all('div', class_='sm-product'):\n",
     "    # Extract brand and other details\n",
     "    name_element = product.find('a', class_='name clamp-2')\n",
-    "    name = name_element.h2.text.split(' ')[0].strip() if name_element else None\n",
+    "    brand_name = name_element.h2.text.split(' ')[0].strip() if name_element else None\n",
+    "    model_name = name_element.h2.text.strip() if name_element else None\n",
     "\n",
     "    price_element = product.find('span', class_='price')\n",
     "    price = int(price_element.text.replace('₹', '').replace(',', '').strip()) if price_element else None\n",
@@ -29,36 +30,37 @@
     "    if specs:\n",
     "        details = specs.find_all('li')\n",
     "        try:\n",
-    "            screen_size = float(details[4].text.split(',')[0].split(' ')[0].strip())\n",
     "            ram_rom = details[2].text.split(',')\n",
     "            ram = int(ram_rom[0].split('G')[0].strip())\n",
     "            romExtract = lambda x: int(float(x.strip().split()[0]) * (1024 if 'TB' in x.upper() else 1))\n",
     "            rom = romExtract(ram_rom[1].split('inbuilt')[0].strip())\n",
     "            front_camera = float(details[5].text.split('&')[1].split('M')[0].strip())\n",
-    "            back_camera = int(details[5].text.split('&')[0].split('+')[0].split('M')[0].strip())\n",
+    "            back_camera = float(details[5].text.split('&')[0].split('+')[0].split('M')[0].strip())\n",
     "            battery = int(details[3].text.split('m')[0].strip())\n",
-    "            spec_score = int(product.find('div', class_='tags').find('b').text.strip())\n",
+    "            clock_speed = float(details[1].text.split(',')[-1].split('G')[0].strip())\n",
+    "            screen_size = float(details[4].text.split('inches')[0].strip())\n",
     "        except IndexError:\n",
     "            continue\n",
     "    else:\n",
     "        continue\n",
     "\n",
     "    data.append({\n",
-    "        'Brand': name,\n",
-    "        'Price (Rs.)': price,\n",
+    "        'Model': model_name,\n",
+    "        'Brand': brand_name,\n",
     "        'Screen Size (in)': screen_size,\n",
     "        'Front Camera (MP)': front_camera,\n",
     "        'Back Camera (MP)': back_camera,\n",
     "        'Battery (mAh)': battery,\n",
     "        'RAM (GB)': ram,\n",
     "        'ROM (GB)': rom,\n",
-    "        'Spec Score': spec_score\n",
+    "        'Clock Speed (Ghz)': clock_speed,\n",
+    "        'Price (Rs.)': price\n",
     "    })\n",
     "\n",
     "# Creating dataframe\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "output_csv_path = '../data/processed/5g_smartphones_dataset.csv'\n",
+    "output_csv_path = '../data/processed/5g_smartphones_datasettest.csv'\n",
     "df.to_csv(output_csv_path, index=False)"
    ]
   },
